--- a/to-do-application/resources/css/app.css
+++ b/to-do-application/resources/css/app.css
@@ -1,3 +1,42 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.main-label{
+    margin-top: 50px;
+    margin-left: 20px;
+}
+
+.side-nav-names{
+    margin-top: 50px;
+}
+
+.inline-outer{
+    width: auto;
+    height: 200px;
+    background-color: aqua;
+    flex: 0.3;
+    margin: 10px;
+    border-radius: 50px;
+    flex-direction: column;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@media (max-width: 1024px) {
+    .complete-button {
+        width: 100%;  
+        
+    }
+}
+
+
+
